# plane-mcp-server

./: pyproject.toml
plane_mcp/tools/: __init__.py  cycles.py  milestones.py  modules.py  work_item_attachments.py
tests/: test_integration.py
